--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,10 @@ github_username:  Devjiho
 # Build settings
 markdown: kramdown
 theme: minima
+highlighter: rouge
+sass:
+  sass_dir: _sass
+  style: :compressed
 plugins:
   - jekyll-feed
 
